src/app/chat/components/chat-list/chat-list.component.css
.header {
  height: 70px;
  width: 100%;
  background-color: #e2e2e2;
  box-shadow: 0 0 4px 0 grey;
}

.chat-list-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  min-width: 250px;
  padding: 10px;
  border-right: 1px solid #CCCCCC;
}

.chat-list {
  min-width: 250px;
  /*background-color: #dea89f;*/
  flex: 1;
  overflow-y: scroll;
}

.chat{
  display: block;
  width: 100%;
  /*background-color: #cacaca;*/
  border-bottom: 1px solid #dddddd;
}

.chat-list::-webkit-scrollbar-track
{
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  background-color: #F5F5F5;
}

.chat-list::-webkit-scrollbar
{
  width: 6px;
  background-color: #F5F5F5;
}

.chat-list::-webkit-scrollbar-thumb
{
  background-color: #bbb;
}

.avatar{
  width: 44px;
  height: 44px;
  border-radius: 50%;
  background-color: #BBBBBB;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.header-options{
color: #bbbbbb;
}

.searchBox {
  transition-delay: 0.12s;
  padding: 0;
  background-color: #fbfbfb;
  -webkit-flex: none;
  flex: none;
  height: 49px;
  box-sizing: border-box;
  position: relative;
  z-index: 100;
  transition: box-shadow 0.18s ease-out, background-color 0.18s ease-out;
}
.searchInput {
  background: white;
  margin: auto;
  top: 50%;
  width: 90%;
  position: relative;
  height: 70%;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  border-radius: 5px;
  border: 1px solid white;
}
.searchInput input {
  border: none;
}
.gray-text, .grey-icon{
  color: #999999;
}
input:focus {
  outline: none;
}
.searchInput mat-icon {
  top: 50%;
  position: relative;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  margin-right: 2px;
}
.chat-title {
  font-size: 16px;
  font-weight: bold;
  color: #333;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}
.chat-message {
  font-size: 14px;
  color: #666;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}
.chat-summary {
  /*background-color: #00bfa5;*/
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-left: 10px;
  overflow: hidden;
}

